# web_module_07

./: README.md  main.py  my_select.py  pyproject.toml
alembic/versions/: 40e175a940c0_init.py
